--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -234,6 +234,36 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Mon Jul 11 2011 Chris Lumens <clumens@redhat.com> - 16.12-1
+- Remove hasFreeDiskSpace and related code. (dlehman)
+- Use protected for pvs of incomplete vgs and get rid of immutable. (dlehman)
+- Use mdadm's default metadata format instead of hardcoding 1.1. (dlehman)
+- Only show warning about no biosboot on gpt on gpt. (dlehman)
+- Plumb the cleanupOnly= option through to Storage.reset(). (clumens)
+- i18n: Maintain the translated repo name upon modifying. (akozumpl)
+- Log errors during dependency resolution. (clumens)
+- Fix a bug where language names aren't translated to native. (clumens)
+- Remove things from utils/ that lorax obsoletes. (clumens)
+- Remove things from scripts/ that lorax obsoletes. (clumens)
+- Handle systems with more than 2147483647 kB of memory (#704593). (dcantrell)
+- Remove support for the ext4migrate option (#712195). (dcantrell)
+- edd: refactor and enhance the edd module. (akozumpl)
+- unit tests: provide 'glob.glob' and 'os.listdir' in the DiskIO class.
+  (akozumpl)
+- Pulsing progress bar instead of the static popup during device discovery.
+  (akozumpl)
+- yum: handle PackageSackErrors separately in AnacondaYum._run. (akozumpl)
+- We need a later version of pykickstart with the wpakey parameter. (clumens)
+- Remove KillMode= from systemd control files. (clumens)
+- Add a property to Platform for accessing boot stage1 constraints. (dlehman)
+- Simplify lvm growing by using units of pesize instead of MB. (dlehman)
+- Move platform-specific boot-related data into Platform. (dlehman)
+- Make /home autoreq grow a bit faster in relation to root. (dlehman)
+- Update upd-bootiso for F16 (bcl)
+- Allow a .iso file to be specified instead of a directory (#707846) (bcl)
+- Fix typo from 573ef017. (akozumpl)
+- Keep dracut settings in sets instead of many long strings. (akozumpl)
+
 * Wed Jun 22 2011 Chris Lumens <clumens@redhat.com> - 16.11-1
 - be more defensive -- check values for nonsenses (vpodzime)
 - enable netmask setting for wireless connections (vpodzime)
