Remove the booty unit tests.
Since all the bootloader stuff has been rewritten, it seems easier to write
new bootloader tests from scratch instead of adapting what we've got.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -17,6 +17,6 @@
 #
 # Author: David Cantrell <dcantrell@redhat.com>
 
-SUBDIRS = mock kickstart_test storage_test regex pyanaconda_test pylint booty_test logpicker_test
+SUBDIRS = mock kickstart_test storage_test regex pyanaconda_test pylint logpicker_test
 
 MAINTAINERCLEANFILES = Makefile.in
