--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -222,6 +222,10 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Thu Aug 18 2011 David Cantrell <dcantrell@redhat.com> - 13.21.131-1
+- rescue mode: fix traceback calling progressWindow() (akozumpl)
+  Resolves: rhbz#730714
+
 * Wed Aug 17 2011 David Cantrell <dcantrell@redhat.com> - 13.21.130-1
 - Move the trusted_boot setting into AnacondaYum.run (clumens).
   Resolves: rhbz#731260
