--- a/.tx/config
+++ b/.tx/config
@@ -6,3 +6,8 @@ source_lang = en
 [main]
 host = https://www.transifex.net
 
+[anaconda.f16-branch]
+file_filter = po/<lang>.po
+source_file = po/anaconda.pot
+source_lang = en
+
