--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -222,6 +222,10 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Mon Aug 22 2011 David Cantrell <dcantrell@redhat.com> - 13.21.134-1
+- Fix the partitioning section of interactive kickstart installs (clumens).
+  Resolves: rhbz#641861
+
 * Mon Aug 22 2011 David Cantrell <dcantrell@redhat.com> - 13.21.133-1
 - Fix typo in d5cabdd21c9f3c20e1e39863c15bff153e9e608f. (akozumpl)
   Resolves: rhbz#732358
