On ppc64, call initrd image "initrd.img"
On other platforms we call it initrd.img, no reason to do otherwise on
ppc64.  Besides, it was still called ramdisk.image.gz despite being
compressed using xz.

Related: rhbz#703914

--- a/bootdisk/ppc/yaboot.conf.in
+++ b/bootdisk/ppc/yaboot.conf.in
@@ -4,5 +4,5 @@ default=linux
 
 image=/ppc/ppc%BITS%/vmlinuz
 	label=linux
-	initrd=/ppc/ppc%BITS%/ramdisk.image.gz
+	initrd=/ppc/ppc%BITS%/initrd.img
 	read-only
