systemd: anaconda.target wants rsyslog.service
Else systemd doesn't start rsyslogd and all the logs get dumped to ttys.

Resolves: rhbz#736125

--- a/data/systemd/Makefile.am
+++ b/data/systemd/Makefile.am
@@ -26,4 +26,5 @@ install-exec-local:
 	mkdir -p $(DESTDIR)/lib/systemd/system/anaconda.target.wants
 	ln -sf /lib/systemd/system/anaconda-shell.service $(DESTDIR)/lib/systemd/system/anaconda.target.wants
 	ln -sf /lib/systemd/system/loader.service $(DESTDIR)/lib/systemd/system/anaconda.target.wants
+	ln -sf /lib/systemd/system/rsyslog.service $(DESTDIR)/lib/systemd/system/anaconda.target.wants
 	ln -sf /lib/systemd/system/udev-settle.service $(DESTDIR)/lib/systemd/system/anaconda.target.wants
