--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -222,6 +222,11 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Wed Sep 07 2011 David Cantrell <dcantrell@redhat.com> - 13.21.139-1
+- mpath: create /etc/multipath/bindings if we are using friendly names.
+  (akozumpl)
+  Resolves: rhbz#734374
+
 * Thu Sep 01 2011 David Cantrell <dcantrell@redhat.com> - 13.21.138-1
 - On ppc64, call initrd image "initrd.img" (dcantrell)
   Related: rhbz#703914
