--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -234,6 +234,55 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Thu Sep 15 2011 Chris Lumens <clumens@redhat.com> - 17.0-1
+- Sort partitioning commmands in anaconda-ks.cfg. (#736527) (dlehman)
+- Install grub2 when upgrading on bios x86. (#735730) (dlehman)
+- Default to installing a new bootloader on upgrade. (dlehman)
+- Add a Reboot button to the congrats screen on live (#705189). (clumens)
+- Add support for reserving space in lvm vgs via kickstart. (dlehman)
+- iutil: make getArch() return ppc64 on ppc64 (#736721) (wwoods)
+- iutil: add 'bits' arg to isPPC (like isX86) (wwoods)
+- nfsiso: handle mismatching .iso architecture gracefully. (akozumpl)
+- systemd: anaconda.target wants rsyslog.service (akozumpl)
+- Improve checking if new biosboot partition is needed. (akozumpl)
+- mpath: create /etc/multipath/bindings if we are using friendly names.
+  (akozumpl)
+- isolate localeInfo and expandLangs() from langauges.py into a separate
+  module. (akozumpl)
+- Make sure we teardown root candidates in all cases. (#693095) (dlehman)
+- Update parted partition by sector, not name, after create. (#733449)
+  (dlehman)
+- Determine existing md arrays' metadata version. (#731266) (dlehman)
+- Don't check mountable before obtaining actual/existing fs size. (#733808)
+  (dlehman)
+- Fix traceback when installing over a system with broken rpm db. (akozumpl)
+- kickstart: use 'bootloader --timeout' even if it is zero. (akozumpl)
+- Fix some things using old bootloader/platform stuff. (dlehman)
+- Fix traceback when validating unallocated partition requests. (#733670)
+  (dlehman)
+- Require BIOS boot partition for GPT bootdisk on BIOS systems. (dlehman)
+- Prevent grub2 from trying to access floppy drives. (dlehman)
+- Limit grub stage2 md members' device type and metadata version. (dlehman)
+- Remove unnecessary ROOT_PATH constant passing. (akozumpl)
+- Moving anaconda.rootPath to constants.ROOT_PATH. (akozumpl)
+- Remove deprecated --rootPath and --test. (akozumpl)
+- Tidy warnings.showwarning into anaconda_log.py. (akozumpl)
+- cosmetic: remove trailing whitespace in timezone_test.py (akozumpl)
+- ut: cleanup after firewall_test.py (akozumpl)
+- ut: move tests/fw_test.py to tests/pyanaconda_test/firewall_test.py
+  (akozumpl)
+- Close out the yum history before running %post scripts (#730857). (clumens)
+- Remove unused attribute 'bootable' from DeviceFormat classes. (dlehman)
+- Allow btrfs stage2 with grub2. (#732594) (dlehman)
+- Clean up return values of GRUB2._gpt_disk_has_bios_boot. (dlehman)
+- Force grub2 install to partition's boot block. (#727679) (dlehman)
+- Don't crash because we don't have support for linear md. (#646157) (dlehman)
+- Clean up obsolete extended partitions if partitioning fails. (#672010)
+  (dlehman)
+- Convert a None from libiscsi.discover() to an empty list. (akozumpl)
+- Honor kickstart 'autopart --nolvm' option (jlaska)
+- Allow answering the uninitialized disk question more than once. (akozumpl)
+
 * Thu Aug 18 2011 Chris Lumens <clumens@redhat.com> - 16.15-1
 - i18n: Do not include newlines in the reinit dialog's label. (akozumpl)
 - Move the trusted_boot setting into AnacondaYum.run (#731260). (clumens)
