--- a/data/systemd/anaconda-shell.service
+++ b/data/systemd/anaconda-shell.service
@@ -1,16 +1,18 @@
+# anaconda-shell@.service
+# This is roughly equivalent to getty@.service, except we go straight to bash
 [Unit]
-Description=Shell on tty2
-BindTo=dev-tty2.device
-After=dev-tty2.device
+Description=Shell on %I
+BindTo=dev-%i.device
+After=dev-%i.device
 
 [Service]
 Environment=TERM=linux
 WorkingDirectory=/
-ExecStart=-/sbin/agetty -n tty2 38400
+ExecStart=-/sbin/agetty -n -l /bin/bash -o '--login' %I 38400
 Restart=always
 RestartSec=0
 TimeoutSec=0
-TTYPath=/dev/tty2
+TTYPath=/dev/%i
 TTYReset=yes
 TTYVHangup=yes
 TTYVTDisallocate=yes
