--- a/data/systemd/loader.service
+++ b/data/systemd/loader.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=The anaconda loader
-Wants=instperf.service tmp.mount
-After=instperf.service tmp.mount
+Wants=instperf.service rsyslog.service udev-settle.service
+After=instperf.service rsyslog.service udev-settle.service
 
 [Service]
 Environment=HOME=/root MALLOC_CHECK_=2 MALLOC_PERTURB_=204 PATH=/usr/bin:/bin:/sbin:/usr/sbin:/mnt/sysimage/bin:/mnt/sysimage/usr/bin:/mnt/sysimage/usr/sbin:/mnt/sysimage/sbin PYTHONPATH=/tmp/updates TERM=linux
