--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -222,6 +222,10 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Mon Oct 03 2011 David Cantrell <dcantrell@redhat.com> - 13.21.142-1
+- Fix logging= parameter for tboot.gz grub.conf configuration (dcantrell)
+  Resolves: rhbz#742152
+
 * Tue Sep 27 2011 David Cantrell <dcantrell@redhat.com> - 13.21.141-1
 - grub: write 'ip=eth0:dhcp,auto6' instead of 'ip=eth0:dhcp ip=eth0:auto6'
   (akozumpl)
